--- a/rough.ipynb
+++ b/rough.ipynb
@@ -9,17 +9,31 @@
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "qNWvgxdOwtEo"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import wandb\n",
+        "from keras.datasets import fashion_mnist"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "plQ2XOQcawb-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
